app/styles/directives/_cost-to-break-calculator.scss
cost-to-break-calculator {
  display: block;
  padding-right: 9px;

  .controls {
    padding: 3px 5px 5px 0;
    margin: 0;
    border-bottom: 1px solid #ddd;
  }

  .stats-row {
    padding-top: 5px;
    padding-left: 5px;
    font-size: 0.85em;

    .stat-label {
      @extend .text-muted;
    }

    .stat {
      padding: 0 6px 0 2px;
    }
  }

  .opponents {
    font-size: 0.9em;
    height: 317px;
    overflow-y: auto;
  }

  .opponent {
    border-bottom: 1px solid #ddd;
    padding: 5px 10px 5px 5px;

    .card {
      float: left;
    }

    .cost {
      text-align: right;
      margin-left: 140px;
    }

    &.not-broken {
      .cost {
        position: relative;
        left: 3px;
        color: $state-danger-text;
      }
    }

    &:last-child {
      border-bottom: none;
    }
  }
}

